--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,8 @@ streamlit_chat
 streamlit-extras
 langchain_community
 langchain-huggingface
-langchain_chroma
-sqlite3>=3.35.0
+chroma-hnswlib==0.7.3
+chromadb==0.5.3
+langchain-chroma==0.1.2
 
 
