--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,8 @@ streamlit_chat
 streamlit-extras
 langchain_community
 langchain-huggingface
-chroma-hnswlib==0.7.3
 chromadb==0.3.29
-
-langchain-chroma==0.1.2
+chroma-hnswlib
+langchain-chroma
 
 
