--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ streamlit
 langchain
 PyPDF2
 pypdf
-python-dotenv==1.0.0
-streamlit==1.18.1
-faiss-cpu==1.7.4
+python-dotenv
+streamlit
+faiss-cpu
 streamlit-extras
 openai
 graphviz
