--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,9 @@ graphviz
 altair<5
 langchain_community
 langchain-huggingface
-langchain_chroma
 langchain_weaviate
 weaviate-client
-protobuf==3.19.4
+protobuf
 
 
 
